@@ -24,13 +24,17 @@ function resolveUrlPrefix(urlPrefixIn) {
     return urlPrefix
 }
 
-function SprinterDash(repos, title) {
-    this.repos = repos;
+function SprinterDash(cfg) {
+    this.repos = cfg.repos;
     this.title = DEFAULT_TITLE;
-    if (title) {
-        this.title = title;
+    if (cfg.title) {
+        this.title = cfg.title;
     }
-    this._issueFetcher = IssueFetcher(repos);
+    this._issueFetcher = IssueFetcher({
+        repos: this.repos
+      , ghUsername: cfg.ghUsername
+      , ghPassword: cfg.ghPassword
+    });
     this.app = undefined;
     this._templates = undefined;
     this._urlPrefix = undefined;
