@@ -175,22 +175,22 @@ function deepSearch(req, res) {
 }
 
 
-module.exports = function(reposIn, ghUsernameIn, ghPasswordIn, travisOrg) {
+module.exports = function(cfg) {
     if (! ghUsername) {
-        ghUsername = ghUsernameIn;
+        ghUsername = cfg.ghUsername;
     }
     if (! ghPassword) {
-        ghPassword = ghPasswordIn;
+        ghPassword = cfg.ghPassword;
     }
-    sprinter = new Sprinter(ghUsername, ghPassword, reposIn);
-    if (travisOrg) {
+    sprinter = new Sprinter(ghUsername, ghPassword, cfg.repos);
+    if (cfg.travisOrg) {
         foreman = new Foreman({
-            organization: travisOrg
+            organization: cfg.travisOrg
           , username: ghUsername
           , password: ghPassword
         });
     }
-    repos = reposIn;
+    repos = cfg.repos;
     return {
         recentIssues: recentIssues
       , allIssues: allIssues
